Version 1.7 -Eta Carinae-

* [NEW] Drawings history added. From the admin drawings panel you can view the history,
  remove versions, etc.
* [NEW] Drawings jGraphPad replaced jHotDraw, lot of new features and tools to edit
  drawings which can be included in any parsed tiki object.
* [NEW] Forums: Breadcrumb added. Links to next/prev topic when browsing threads
  added.
* [NEW] Forums: Topic summaries added and can be used (optional)
* [NEW] Forums: Topic smileys can be used
* [NEW] File galleries: you can edit the name/description of files (Joan)
* [NEW] File galleries: duplicate uploads are prevented.
* [NEW] Articles: topic or article image can 'float' around text optionally.
* [NEW] Forums: columns to be listed in topic listing can be
  configured per-forum.
* [NEW] Forums: columns to be listed in forum listing can be
  configured.
* [NEW] Notes in notepad remember parsing mode.
* [NEW] Notes in notepad can be viewed as smarty templates
* [NEW] Forum posts can be saved to the notepad.
* [NEW] Weblog posts can be saved to the notepad.
* [NEW] Notepad: A note can be converted in a wiki page or
  update the content of any wiki page (if permitted)
* [NEW] Notepad: notes can be merged into a single note.
* [NEW] Weblogs: Trackback pings implemented, you can send a ping from any weblog
  post to any URI accepting trackback pings. Tiki will also accept trackback
  pings the tiki-view_blog_post.php script implements the discovery mechanism,
  then Tiki can display a list of trackback pings to your blog posts from other
  sites. Compatible with geeklog, movabletype and other wonderful weblogging
  packages that are-now-eclipsed-by-the-amazing-tiki-machine!
* [NEW] Weblogs: interface added to add images to a weblog post, this works
  with the traditional editor or the brand-new WYSIWYG editor.
* [NEW] Customizable heading (all the html before posts) for weblogs.
* [NEW] You can control if individual weblogs accept comments